// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test del login LoginButton test 1`] = `
<button
  class="btn btn-primary"
  onClick="Prueba"
>
  Conectarse
</button>
`;

exports[`test del login LogoutButton test 1`] = `
<button
  class="btn btn-primary"
  onClick="Prueba"
>
  Desconectarse
</button>
`;
